--- a/app/assets/stylesheets/reset.scss
+++ b/app/assets/stylesheets/reset.scss
@@ -1,10 +1,12 @@
 * {
-  color: black;
+  color: inherit;
   margin: 0;
   padding: 0;
   box-sizing: border-box;
   list-style: none;
   font-family: 'Raleway', sans-serif;
+  background: none;
+  font-size: inherit;
 }
 
 input:focus, button:focus {
