--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -215,28 +215,28 @@ $purple2: #5d0391;
   bottom: 0;
   width: 100%;
   background-color: $grey;
-  padding-top: 20px;
+  padding-top: 15px;
 
   .player-buttons {
     margin: auto;
     text-align: center;
 
     .back, .forward {
-      height: 30px;
-      width: 30px;
+      height: 20px;
+      width: 20px;
       border: none;
       color: white;
-      font-size: 18px;
+      font-size: 12px;
     }
     .play {
-      height: 50px;
-      width: 50px;
+      height: 40px;
+      width: 40px;
       padding-left: 2px;
       margin: 0px 10px;
       color: white;
       border: solid 1px white;
       border-radius: 100%;
-      font-size: 18px;
+      font-size: 12px;
     }
   }
 }
@@ -254,7 +254,8 @@ $purple2: #5d0391;
   right: 0;
   height: unquote("-webkit-calc(100vh - 90px)");
   width: unquote("-webkit-calc(100vw - 200px)");
-  padding: 25px;
+  padding: 20px;
+  overflow: scroll;
 
   .main-nav {
     height: 60px;
@@ -291,5 +292,107 @@ $purple2: #5d0391;
     .new-playlist:hover {
       background-color: $purple2;
     }
+  }
+}
+
+.media-card {
+  height: 250px;
+  width: 170px;
+  margin: 0px 5px;
+  text-align: center;
+  position: relative;
+  color: white;
+  font-size: 14px;
+  
+  img {
+    display: block;
+    height: 170px;
+    width: 170px;
+    box-shadow: 0px 0px 5px 1px #5d0391;
+  }
+
+  h4, h5 {
+    width: 80%;
+    margin: auto;
+    margin-top: 5px;
+  }
+
+  h5 {
+    color: rgba(222, 200, 228, 0.719);
+  }
+
+  .media-play {
+    font-size: 30px;
+    height: 60px;
+    width: 60px;
+    border: solid 1px white;
+    border-radius: 100%;
+    color: white;
+    position: absolute;
+    top: 55px;
+    left: 55px;
+  }
+}
+
+.media-overlay, .media-overlay-selected {
+  background: #350153bd;
+  height: 170px;
+  width: 170px;
+  position: absolute;
+  top: 0;
+  left:0;
+}
+
+.media-card .media-overlay {
+  display: none;
+}
+
+.media-card:hover .media-overlay {
+  display: block;
+}
+
+.albums {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.album-show {
+  display: flex;
+  height: 100%;
+
+  .album-show-artist {
+    padding: 0px 40px 0px 20px;
+  }
+
+  ul {
+    width: 100%;
+    overflow: scroll;
+  }
+
+  h4, h5 {
+    text-align: center;
+    color: white;
+    width: 80%;
+    margin: auto;
+  }
+
+  h4 {
+    font-size: 24px;
+    margin-top: 20px;
+    margin-bottom: 10px;
+  }
+
+  h5 {
+    font-size: 14px;
+    color: rgba(222, 200, 228, 0.719);
+  }
+
+  .album-back {
+    position: absolute;
+    border: none;
+    color: white;
+    font-size: 24px;
+    bottom: 30px;
+    left: 30px;
   }
 }
