--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -239,6 +239,49 @@ $purple2: #5d0391;
       font-size: 12px;
     }
   }
+
+  .progress-container {
+    margin: auto;
+    text-align: center;
+    margin-top: 10px;
+    
+    .progress {
+      cursor: pointer;
+      width: 400px;
+    }
+  }
+
+  .volume-container {
+    position: absolute;
+    right: 20px;
+    bottom: 30px;
+    .volume {
+      cursor: pointer;
+      width: 200px;
+    }
+  }
+
+  .song-info {
+    display: flex;
+    position: absolute;
+    left: 15px;
+    top: 15px;
+    img {
+      height: 60px;
+      width: 60px;
+      object-fit: cover; 
+    }
+    div {
+      padding: 15px 5px 10px 10px;
+      h4, h5 {
+        font-size: 12px;
+        color: white;
+      }
+      h5 {
+        color: rgba(222, 200, 228, 0.719);
+      }
+    }
+  }
 }
 
 
