--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -7,435 +7,453 @@ $purple: #7708b8;
 $purple2: #5d0391;
 
 .nav {
-  height: 90px;
-  background: rgba(0,0,0,.8);
-  position: fixed;
-  width: 100%;
-  display: flex;
-  justify-content: space-between;
-  padding: 20px;
+	height: 90px;
+	background: rgba(0, 0, 0, 0.8);
+	position: fixed;
+	width: 100%;
+	display: flex;
+	justify-content: space-between;
+	padding: 20px;
 }
 
-.logo, .logoB {
-  height: 50px;
-  width: 50px;
-  object-fit: cover;
-  border-radius: 100%;
-  border: solid 2px $green;
-  cursor: pointer;
+.logo,
+.logoB {
+	height: 50px;
+	width: 50px;
+	object-fit: cover;
+	border-radius: 100%;
+	border: solid 2px $green;
+	cursor: pointer;
 }
 
 .logoB {
-  height: 40px;
-  width: 40px;
-  position: relative;
-  top: 10px;
-  left: 20px;
+	height: 40px;
+	width: 40px;
+	position: relative;
+	top: 10px;
+	left: 20px;
 }
 
 .nav-links a {
-  padding: 15px;
-  color: white;
-  height: 50px;
-  display: inline-block;
+	padding: 15px;
+	color: white;
+	height: 50px;
+	display: inline-block;
 }
 
 .nav-links a:hover {
-  color: $green;
+	color: $green;
 }
 
 .splash-main {
-  background: url('https://s3-us-west-1.amazonaws.com/react-spotify-aa/gradient.png');
-  height: 100vh;
+	background: url('https://s3-us-west-1.amazonaws.com/react-spotify-aa/gradient.png');
+	height: 100vh;
 }
 
 .splash {
-  padding-top: 90px;
-  width: 700px;
-  margin: auto;
-  text-align: center;
+	padding-top: 90px;
+	width: 700px;
+	margin: auto;
+	text-align: center;
 
-  h1 {
-    color: white;
-    font-size: 65px;
-    margin-top: 75px;
-    margin-bottom: 20px;
-  }
+	h1 {
+		color: white;
+		font-size: 65px;
+		margin-top: 75px;
+		margin-bottom: 20px;
+	}
 
-  h2 {
-    color: white;
-    font-size: 24px;
-  }
+	h2 {
+		color: white;
+		font-size: 24px;
+	}
 }
 
-.login, .session-form button, .logout, .new-playlist {
-  padding: 10px 40px;
-  border: none;
-  border-radius: 20px 20px;
-  font-size: 16px;
-  text-transform: uppercase;
-  color: white;
-  margin: 0px 5px 20px 5px;
-  box-shadow: 0px 0px 10px 0px rgba(235, 124, 235, 0.568);
+.splash-ul {
+	margin-top: 20px;
+	li {
+		color: white;
+		font-weight: bold;
+		font-size: 20px;
+		margin-bottom: 10px;
+	}
 }
 
-.login, .session-form button:first-of-type {
-  background-color: $green;
+.login,
+.session-form button,
+.logout,
+.new-playlist {
+	padding: 10px 40px;
+	border: none;
+	border-radius: 20px 20px;
+	font-size: 16px;
+	text-transform: uppercase;
+	color: white;
+	margin: 0px 5px 20px 5px;
+	box-shadow: 0px 0px 10px 0px rgba(235, 124, 235, 0.568);
 }
 
-.login:hover, .session-form button:first-of-type:hover {
-  background-color: $green2;
+.login,
+.session-form button:first-of-type {
+	background-color: $green;
 }
 
-.demo, .logout {
-  background-color: $blue;
+.login:hover,
+.session-form button:first-of-type:hover {
+	background-color: $green2;
 }
 
-.demo:hover, .logout:hover {
-  background-color: $blue2;
+.demo,
+.logout {
+	background-color: $blue;
+}
+
+.demo:hover,
+.logout:hover {
+	background-color: $blue2;
 }
 
 .session-form {
-  background: url('https://s3-us-west-1.amazonaws.com/react-spotify-aa/gradient.png');
-  height: 100vh;
-  padding-top: 50px;
+	background: url('https://s3-us-west-1.amazonaws.com/react-spotify-aa/gradient.png');
+	height: 100vh;
+	padding-top: 50px;
 
-  form {
-    width: 400px;
-    border-radius: 3px;
-    height: 600px;
-    background: rgba(255, 255, 255, 0.7);
-    margin: auto;
-    padding: 20px;
-    text-align: center;
+	form {
+		width: 400px;
+		border-radius: 3px;
+		height: 600px;
+		background: rgba(255, 255, 255, 0.7);
+		margin: auto;
+		padding: 20px;
+		text-align: center;
 
-    h1 {
-      margin: 30px 0px;
-    }
+		h1 {
+			margin: 30px 0px;
+		}
 
-    input {
-      padding: 10px;
-      display: block;
-      border: none;
-      width: 80%;
-      text-align: center;
-      margin: auto;
-      border-radius: 3px;
-      border: solid 3px rgba(255, 255, 255, 0.3);
-      font-size: 24px;
-    }
-    input:active, input:focus {
-      border: solid 3px $green;
-    }
+		input {
+			padding: 10px;
+			display: block;
+			border: none;
+			width: 80%;
+			text-align: center;
+			margin: auto;
+			border-radius: 3px;
+			border: solid 3px rgba(255, 255, 255, 0.3);
+			font-size: 24px;
+		}
+		input:active,
+		input:focus {
+			border: solid 3px $green;
+		}
 
-    h2 a {
-      color: $blue2;
-      cursor: pointer;
-    }
-    h2 a:hover {
-      color: $blue;
-    }
-  }
+		h2 a {
+			color: $blue2;
+			cursor: pointer;
+		}
+		h2 a:hover {
+			color: $blue;
+		}
+	}
 }
 
 .browse {
-  height: 100vh;
-  background: url('https://s3-us-west-1.amazonaws.com/react-spotify-aa/gradient.png');
-  -webkit-filter: hue-rotate(-90deg);
-  filter: hue-rotate(-90deg);
-  .color-fix {
-    height: 100vh;
-    -webkit-filter: hue-rotate(90deg);
-    filter: hue-rotate(90deg);
-  }
+	height: 100vh;
+	background: url('https://s3-us-west-1.amazonaws.com/react-spotify-aa/gradient.png');
+	-webkit-filter: hue-rotate(-90deg);
+	filter: hue-rotate(-90deg);
+	.color-fix {
+		height: 100vh;
+		-webkit-filter: hue-rotate(90deg);
+		filter: hue-rotate(90deg);
+	}
 
-  .song {
-    color: white;
-    font-size: 14px;
-    display: flex;
-    justify-content: space-between;
-    padding: 10px 15px;
-  }
+	.song {
+		color: white;
+		font-size: 14px;
+		display: flex;
+		justify-content: space-between;
+		padding: 10px 15px;
+	}
 
-  .song > div {
-    display: flex;
-  }
+	.song > div {
+		display: flex;
+	}
 
-  .song-icon-container {
-    height: 20px;
-    width: 16px;
-    margin-right: 10px;
-  }
+	.song-icon-container {
+		height: 20px;
+		width: 16px;
+		margin-right: 10px;
+	}
 
-  .song .fa-play {
-    display: none;
-    font-size: 12px;
-    border-radius: 100%;
-    margin-top: 4px;
-  }
+	.song .fa-play {
+		display: none;
+		font-size: 12px;
+		border-radius: 100%;
+		margin-top: 4px;
+	}
 
-  .song span {
-    display: block;
-  }
+	.song span {
+		display: block;
+	}
 
-  .song:hover {
-    background: #5d039183;
-  }
+	.song:hover {
+		background: #5d039183;
+	}
 
-  .song:hover .fa-play {
-    display: block;
-  }
+	.song:hover .fa-play {
+		display: block;
+	}
 
-  .song:hover span {
-    display: none;
-  }
+	.song:hover span {
+		display: none;
+	}
 }
 
 .sidebar {
-  width: 200px;
-  height: unquote("-webkit-calc(100vh - 90px)");
-  background: rgba(0,0,0,.8);
-  position: relative;
-  .logout {
-    position: absolute;
-    bottom: 0px;
-    left: 20px;
-  }
+	width: 200px;
+	height: unquote('-webkit-calc(100vh - 90px)');
+	background: rgba(0, 0, 0, 0.8);
+	position: relative;
+	.logout {
+		position: absolute;
+		bottom: 0px;
+		left: 20px;
+	}
 }
 
 .error {
-  color: red;
-  min-height: 30px;
-  padding:5px 0px;
+	color: red;
+	min-height: 30px;
+	padding: 5px 0px;
+	font-size: 12px;
 }
 
 .player {
-  height: 90px;
-  position: fixed;
-  bottom: 0;
-  width: 100%;
-  background-color: $grey;
-  padding-top: 15px;
+	height: 90px;
+	position: fixed;
+	bottom: 0;
+	width: 100%;
+	background-color: $grey;
+	padding-top: 15px;
 
-  .player-buttons {
-    margin: auto;
-    text-align: center;
+	.player-buttons {
+		margin: auto;
+		text-align: center;
 
-    .back, .forward {
-      height: 20px;
-      width: 20px;
-      border: none;
-      color: white;
-      font-size: 12px;
-    }
-    .play {
-      height: 40px;
-      width: 40px;
-      padding-left: 2px;
-      margin: 0px 10px;
-      color: white;
-      border: solid 1px white;
-      border-radius: 100%;
-      font-size: 12px;
-    }
-  }
+		.back,
+		.forward {
+			height: 20px;
+			width: 20px;
+			border: none;
+			color: white;
+			font-size: 12px;
+		}
+		.play {
+			height: 40px;
+			width: 40px;
+			padding-left: 2px;
+			margin: 0px 10px;
+			color: white;
+			border: solid 1px white;
+			border-radius: 100%;
+			font-size: 12px;
+		}
+	}
 
-  .progress-container {
-    margin: auto;
-    text-align: center;
-    margin-top: 10px;
-    
-    .progress {
-      cursor: pointer;
-      width: 400px;
-    }
-  }
+	.progress-container {
+		margin: auto;
+		text-align: center;
+		margin-top: 10px;
 
-  .volume-container {
-    position: absolute;
-    right: 20px;
-    bottom: 30px;
-    .volume {
-      cursor: pointer;
-      width: 200px;
-    }
-  }
+		.progress {
+			cursor: pointer;
+			width: 400px;
+		}
+	}
 
-  .song-info {
-    display: flex;
-    position: absolute;
-    left: 15px;
-    top: 15px;
-    img {
-      height: 60px;
-      width: 60px;
-      object-fit: cover; 
-    }
-    div {
-      padding: 15px 5px 10px 10px;
-      h4, h5 {
-        font-size: 12px;
-        color: white;
-      }
-      h5 {
-        color: rgba(222, 200, 228, 0.719);
-      }
-    }
-  }
+	.volume-container {
+		position: absolute;
+		right: 20px;
+		bottom: 30px;
+		.volume {
+			cursor: pointer;
+			width: 200px;
+		}
+	}
+
+	.song-info {
+		display: flex;
+		position: absolute;
+		left: 15px;
+		top: 15px;
+		img {
+			height: 60px;
+			width: 60px;
+			object-fit: cover;
+		}
+		div {
+			padding: 15px 5px 10px 10px;
+			h4,
+			h5 {
+				font-size: 12px;
+				color: white;
+			}
+			h5 {
+				color: rgba(222, 200, 228, 0.719);
+			}
+		}
+	}
 }
 
-
-
-
-
-
-
-
 .main {
-  position: absolute;
-  top: 0;
-  right: 0;
-  height: unquote("-webkit-calc(100vh - 90px)");
-  width: unquote("-webkit-calc(100vw - 200px)");
-  padding: 20px;
-  overflow: scroll;
+	position: absolute;
+	top: 0;
+	right: 0;
+	height: unquote('-webkit-calc(100vh - 90px)');
+	width: unquote('-webkit-calc(100vw - 200px)');
+	padding: 20px;
+	overflow: scroll;
 
-  .main-nav {
-    height: 60px;
-    width: 100%;
-    position: relative;
+	.main-nav {
+		height: 60px;
+		width: 100%;
+		position: relative;
 
-    ul {
-      display: flex;
-      justify-content: space-between;
-      margin: auto;
-      width: 300px;
+		ul {
+			display: flex;
+			justify-content: space-between;
+			margin: auto;
+			width: 300px;
 
-      li {
-        color: #ddd;
-        font-size: 12px;
-        text-transform: uppercase;
-        cursor: pointer;
-      }
+			li {
+				color: #ddd;
+				font-size: 12px;
+				text-transform: uppercase;
+				cursor: pointer;
+			}
 
-      li:hover {
-        color:#fff;
-      }
-    }
+			li:hover {
+				color: #fff;
+			}
+		}
 
-    .new-playlist {
-      position: absolute;
-      right: 0;
-      top: -10px;
-      padding: 10px 15px;
-      background-color: $purple;
-      font-size: 11px;
-      text-transform: uppercase;
-    }
-    .new-playlist:hover {
-      background-color: $purple2;
-    }
-  }
+		.new-playlist {
+			position: absolute;
+			right: 0;
+			top: -10px;
+			padding: 10px 15px;
+			background-color: $purple;
+			font-size: 11px;
+			text-transform: uppercase;
+		}
+		.new-playlist:hover {
+			background-color: $purple2;
+		}
+	}
 }
 
 .media-card {
-  height: 250px;
-  width: 170px;
-  margin: 0px 5px;
-  text-align: center;
-  position: relative;
-  color: white;
-  font-size: 14px;
-  
-  img {
-    display: block;
-    height: 170px;
-    width: 170px;
-    box-shadow: 0px 0px 5px 1px #5d0391;
-  }
+	height: 250px;
+	width: 170px;
+	margin: 0px 5px;
+	text-align: center;
+	position: relative;
+	color: white;
+	font-size: 14px;
 
-  h4, h5 {
-    width: 80%;
-    margin: auto;
-    margin-top: 5px;
-  }
+	img {
+		display: block;
+		height: 170px;
+		width: 170px;
+		box-shadow: 0px 0px 5px 1px #5d0391;
+	}
 
-  h5 {
-    color: rgba(222, 200, 228, 0.719);
-  }
+	h4,
+	h5 {
+		width: 80%;
+		margin: auto;
+		margin-top: 5px;
+	}
 
-  .media-play {
-    font-size: 30px;
-    height: 60px;
-    width: 60px;
-    border: solid 1px white;
-    border-radius: 100%;
-    color: white;
-    position: absolute;
-    top: 55px;
-    left: 55px;
-  }
+	h5 {
+		color: rgba(222, 200, 228, 0.719);
+	}
+
+	.media-play {
+		font-size: 30px;
+		height: 60px;
+		width: 60px;
+		border: solid 1px white;
+		border-radius: 100%;
+		color: white;
+		position: absolute;
+		top: 55px;
+		left: 55px;
+	}
 }
 
-.media-overlay, .media-overlay-selected {
-  background: #350153bd;
-  height: 170px;
-  width: 170px;
-  position: absolute;
-  top: 0;
-  left:0;
+.media-overlay,
+.media-overlay-selected {
+	background: #350153bd;
+	height: 170px;
+	width: 170px;
+	position: absolute;
+	top: 0;
+	left: 0;
 }
 
 .media-card .media-overlay {
-  display: none;
+	display: none;
 }
 
 .media-card:hover .media-overlay {
-  display: block;
+	display: block;
 }
 
 .albums {
-  display: flex;
-  flex-wrap: wrap;
+	display: flex;
+	flex-wrap: wrap;
 }
 
 .album-show {
-  display: flex;
-  height: 100%;
+	display: flex;
+	height: 100%;
 
-  .album-show-artist {
-    padding: 0px 40px 0px 20px;
-  }
+	.album-show-artist {
+		padding: 0px 40px 0px 20px;
+	}
 
-  ul {
-    width: 100%;
-    overflow: scroll;
-  }
+	ul {
+		width: 100%;
+		overflow: scroll;
+	}
 
-  h4, h5 {
-    text-align: center;
-    color: white;
-    width: 80%;
-    margin: auto;
-  }
+	h4,
+	h5 {
+		text-align: center;
+		color: white;
+		width: 80%;
+		margin: auto;
+	}
 
-  h4 {
-    font-size: 24px;
-    margin-top: 20px;
-    margin-bottom: 10px;
-  }
+	h4 {
+		font-size: 24px;
+		margin-top: 20px;
+		margin-bottom: 10px;
+	}
 
-  h5 {
-    font-size: 14px;
-    color: rgba(222, 200, 228, 0.719);
-  }
+	h5 {
+		font-size: 14px;
+		color: rgba(222, 200, 228, 0.719);
+	}
 
-  .album-back {
-    position: absolute;
-    border: none;
-    color: white;
-    font-size: 24px;
-    bottom: 30px;
-    left: 30px;
-  }
+	.album-back {
+		position: absolute;
+		border: none;
+		color: white;
+		font-size: 24px;
+		bottom: 30px;
+		left: 30px;
+	}
 }
