--- a/app/assets/stylesheets/modal.scss
+++ b/app/assets/stylesheets/modal.scss
@@ -1,6 +1,7 @@
-.create-modal-links {
-	margin-top: 20px;
-	border-top: solid 1px #444;
+.create-modal-links,
+.sidebar-page-links {
+	margin-top: 5px;
+	padding-left: 5px;
 	li {
 		color: white;
 		cursor: pointer;
