--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Spotify</title>
+    <title>Mixtape</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
     <script>
@@ -13,6 +13,7 @@
         }
       <% end %>
     </script>
+    <link rel="icon" href="https://react-spotify-aa.s3-us-west-1.amazonaws.com/reactnote2.png">
     <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP" crossorigin="anonymous">
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
