Add hard endpoints, will break dev

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,8 +6,13 @@
     <%= csp_meta_tag %>
     <script>
       window.NODE_ENV = "<%= ENV["NODE_ENV"] || "" %>";
-      window.NODE_ENDPOINT = "<%= ENV["NODE_ENDPOINT"] || "http://localhost:3001" %>";
-      window.RAILS_ENDPOINT = "<%= ENV["RAILS_ENDPOINT"] || "http://localhost:3000" %>";
+      window.NODE_ENDPOINT = "https://yt--dl.herokuapp.com/"
+      
+      console.log("rails:", <%= ENV["RAILS_ENDPOINT"] %>)
+      console.log("node:", <%= ENV["NODE_ENDPOINT"] %>)
+      console.log("env:", <%= ENV["RAILS_ENV"] %>)
+      console.log("node_env:", <%= ENV["NODE_ENV"] %>)
+      console.log("google: ", <%= ENV["GOOGLE_API_KEY"] %>)
       window.GOOGLE_API_KEY = "<%= ENV["GOOGLE_API_KEY"] || nil %>";
     </script>
     <script>
