--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -48,6 +48,7 @@ $pink-1: #de6a9e;
 
 .splash-main {
 	background: url('https://s3-us-west-1.amazonaws.com/react-spotify-aa/gradient.png');
+	background-size: cover;
 	height: 100vh;
 }
 
